# experimentSRPatch

./: .gitignore  Dockerfile  EDSR.py  README.md  batch_processing.toml  config.toml  custom_upsampler_config.toml  demo.sh  docker_build.sh  docker_run.sh  downloader.toml  driver.py  gantrainingconfig.toml  install.sh  loader_config.toml  main.py  pyproject.toml  requirements.txt  upsampler_config.toml
experimentSRPatch/: pyproject.toml
experimentsrpatch/: .different_shave_checker.py.swp  EDSR.py  batch_experiment.py  batch_experiment.sh  batch_forward_chop.py  batch_forward_chop_experiment.py  batch_patch_forward_chop.py  batch_predictor.py  binarysearch.py  binarysearch_helper.py  check_forward_chop.py  commands.txt  create_trt_engine.py  custom_model_loader.py  custom_upsampler.py  demo.sh  different_patch_checker.py  different_shave_check.py  different_shave_checker.py  downloader.py  experiments.py  file_downloader.py  forward_chop.py  forward_chop_async.py  forward_chop_recursive.py  helper_batch_patch_forward_chop.py  linearsearch.py  main.py  modelloader.py  npy_opener.py  onnx_edsr.py  onnx_helper.py  onnx_model_builder.py  onnx_runtime.py  onnx_trt_util.py  patch_calculation.py  patch_calculator.py  plot_csv.py  pytorch_to_trt_pipeline.py  recursive_vs_iterative.py  (+10 more)
misc/: async_forward_chop.py  asyncio.py  employee.py  forward_chop_rough.py  log-sample-2.py  log-sample.py  tensorRT_rough.py  toml_practice.py  tqdm_rough.py
tests/: test_batch_forward_chop_experiment.py  test_batch_patch_forward_chop.py  test_batch_predictor.py  test_binarysearch.py  (+15 more)
(+78 files in other folders)
