[tool.poetry]
name = "experimentSRPatch"
version = "0.1.0"
description = ""
authors = ["Chashi Mahiul Islam <ci20l@my.fsu.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
tqdm = "^4.60.0"
pynvml = "^8.0.4"
pandas = "^1.2.4"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"
toml = "^0.10.2"
Sphinx = "^4.0.2"
gpustat = "^0.6.0"
scikit-image = "^0.18.1"
nest-asyncio = "^1.5.1"
pyfiglet = "^0.8.post1"
docopt = "^0.6.2"
scipy = "^1.7.0"
click = "^8.0.1"
albumentations = "^1.0.3"
onnx = "^1.9.0"
opencv-python = "^4.5.3"
netron = "^5.0.5"
pipwin = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"
black = "^21.5b1"
coverage = "^5.5"
spyder = "^5.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
